--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "antd": "^4.24.1",
+    "axios": "^1.1.3",
     "moment": "^2.29.4",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
