--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.4.3",
     "antd": "^4.24.1",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
