--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.18.0",
     "react-icons": "^4.6.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
